[gd_scene load_steps=3 format=2]

[ext_resource path="res://views/InfoView.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Info" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 128.0
margin_top = 72.0
margin_right = 1152.0
margin_bottom = 648.0
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 682.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 1024.0
margin_bottom = 178.0
size_flags_horizontal = 3
text = "A message from the developer:"
align = 1
valign = 1
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 1024.0
margin_bottom = 682.0
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 500.0
rect_min_size = Vector2( 480, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
visible = false
margin_left = 524.0
margin_right = 1024.0
margin_bottom = 607.0
size_flags_horizontal = 3
custom_constants/separation = 72

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 500.0
margin_bottom = 103.0
text = "Features 
Coming Soon!"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 175.0
margin_right = 500.0
margin_bottom = 247.0
rect_min_size = Vector2( 256, 72 )
size_flags_horizontal = 3
size_flags_vertical = 4
disabled = true

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 319.0
margin_right = 500.0
margin_bottom = 391.0
rect_min_size = Vector2( 256, 72 )
size_flags_horizontal = 3
size_flags_vertical = 4
disabled = true

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 463.0
margin_right = 500.0
margin_bottom = 535.0
rect_min_size = Vector2( 256, 72 )
size_flags_horizontal = 3
size_flags_vertical = 4
disabled = true

[node name="back_btn" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 72 )
text = "<<<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 128, 0 )
text = "v. 0.0.0"
